--- a/carrot/.gitignore
+++ b/carrot/.gitignore
@@ -6,7 +6,10 @@ yarn-debug.log*
 yarn-error.log*
 firebase-debug.log*
 firebase-debug.*.log*
+.next/
+.next
 
+.babelrc
 # Firebase cache
 .firebase/
 
