--- a/carrot/package.json
+++ b/carrot/package.json
@@ -10,8 +10,10 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "babel-plugin-styled-components": "^2.0.7",
         "bootstrap": "^5.1.3",
         "firebase": "^8.6.5",
+        "immer": "^9.0.12",
         "next": "^9.5.5",
         "next-redux-wrapper": "^6.0.2",
         "react": "^16.14.0",
@@ -21,7 +23,9 @@
         "redux": "^4.2.0",
         "redux-actions": "^2.6.5",
         "redux-devtools-extension": "^2.13.9",
-        "redux-saga": "^1.1.3"
+        "redux-saga": "^1.1.3",
+        "shortid": "^2.2.16",
+        "styled-components": "^5.3.5"
     },
     "devDependencies": {
         "eslint": "^8.14.0",
