--- a/2/package.json
+++ b/2/package.json
@@ -13,6 +13,7 @@
         "react-router": "^6.3.0",
         "react-router-dom": "5",
         "react-scripts": "5.0.1",
+        "styled-component": "^2.8.0",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
