--- a/4/package.json
+++ b/4/package.json
@@ -18,6 +18,7 @@
         "redux-devtools-extension": "^2.13.9",
         "redux-saga": "^1.1.3",
         "styled-components": "^5.3.5",
+        "uuid": "^8.3.2",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
