--- a/4/package.json
+++ b/4/package.json
@@ -10,6 +10,7 @@
         "immer": "^9.0.14",
         "react": "^16.14.0",
         "react-dom": "^16.14.0",
+        "react-dropzone": "^14.2.1",
         "react-redux": "^8.0.1",
         "react-router-dom": "^5.3.0",
         "react-scripts": "5.0.1",
