--- a/5/package.json
+++ b/5/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "@reduxjs/toolkit": "^1.8.2",
+        "axios": "^0.27.2",
         "react": "^16.14.0",
         "react-dom": "^16.14.0",
         "react-redux": "^8.0.2",
