--- a/5/package.json
+++ b/5/package.json
@@ -9,6 +9,7 @@
         "react-dom": "^16.14.0",
         "react-redux": "^8.0.2",
         "react-scripts": "5.0.1",
+        "redux-saga": "^1.1.3",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
